Editing content, fixed overflow profile summary

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
 .img-fluid {
     width: 100%;
 }
+
+#profile-summary {
+    overflow: auto;
+}
